--- a/ClassNotes/Statements/1_Variable.ipynb
+++ b/ClassNotes/Statements/1_Variable.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Variable = Expression"
+    "# Variable = Expression"
    ]
   },
   {
@@ -133,25 +134,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, My name is Bob\n",
-      "Bob is 20 years old\n",
-      "Unfortunately, Bob will probably die within 80 years...\n"
+      "Hello, My name is Vincent\n",
+      "Vincent is 21 years old\n",
+      "Unfortunately, Vincent will probably die within 79 years...\n"
      ]
     }
    ],
    "source": [
-    "name = \"Bob\"\n",
-    "age = 20\n",
+    "name = \"Vincent\"\n",
+    "age = 21\n",
     "print(\"Hello, My name is \" + name)\n",
     "print(name + \" is \" + str(age) + \" years old\")\n",
     "print(\"Unfortunately, \" + name + \" will probably die within \" + str(100 - age) + \" years...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + int(\"2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(1) + \"2\""
    ]
   }
  ],
@@ -171,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
