--- a/ClassNotes/Statements/2_If_Statment.ipynb
+++ b/ClassNotes/Statements/2_If_Statment.ipynb
@@ -34,7 +34,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anya is cute!!\n",
+      "Waku Waku~\n",
+      "spy x family 真好看 :3\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Anya'\n",
+    "if name == 'Anya':\n",
+    "    print(\"Anya is cute!!\")\n",
+    "    print(\"Waku Waku~\")\n",
+    "    \n",
+    "print(\"spy x family 真好看 :3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -47,28 +71,6 @@
    ],
    "source": [
     "name = 'Anya'\n",
-    "if name == 'anya':\n",
-    "    print(\"Anya is cute!!\")\n",
-    "    print(\"Waku Waku~\")\n",
-    "    \n",
-    "print(\"spy x family 真好看 :3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "spy x family 真好看 :3\n"
-     ]
-    }
-   ],
-   "source": [
-    "name = 'Vincent'\n",
     "if name == 'anya':\n",
     "    print(\"Anya is cute!!\")\n",
     "    print(\"Waku Waku~\")\n",
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -385,21 +387,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (811675122.py, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 13\u001b[0;36m\u001b[0m\n\u001b[0;31m    if age < 6:\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
      ]
     }
    ],
    "source": [
-    "age = ...;        # int\n",
-    "beginner = ...;   # bool\n",
+    "age = 3        # int\n",
+    "beginner = False   # bool\n",
     "\n",
     "# age of player               practice time\n",
     "# -----------------------------------------\n",
@@ -447,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
