--- a/ClassNotes/Statements/3_Loop.ipynb
+++ b/ClassNotes/Statements/3_Loop.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -55,20 +55,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Anna', 'Vincent', 'Bob']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 把所有的 Anya 都刪掉\n",
     "names = ['Anya', 'Anna', 'Anya', 'Vincent', 'Anya', 'Anya', 'Bob']\n",
     "\n",
     "while 'Anya' in names:\n",
-    "    names.remove('Anya')"
+    "    names.remove('Anya')\n",
+    "\n",
+    "names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -89,9 +102,9 @@
     "s = \"MGT201\"\n",
     "\n",
     "i = 0\n",
-    "while i < len(s):\n",
+    "while i < 6:\n",
     "    print(i, s[i])\n",
-    "    i += 1"
+    "    i += 1       # i = i + 1"
    ]
   },
   {
@@ -104,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -125,40 +138,6 @@
     "    i += 1\n",
     "\n",
     "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t\n",
-      "r\n",
-      "t\n",
-      "r\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = 'tree'\n",
-    "\n",
-    "i = 0 \n",
-    "while i < len(s):\n",
-    "    if s[i] in 'aeiouAEIOU':\n",
-    "        break\n",
-    "    print(s[i])\n",
-    "    i += 1\n",
-    "# t\n",
-    "# r\n",
-    "\n",
-    "i = 0 \n",
-    "while i < len(s) and s[i] not in 'aeiouAEIOU':\n",
-    "    print(s[i])\n",
-    "    i += 1"
    ]
   },
   {
@@ -184,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -202,15 +181,18 @@
       "hello 0\n",
       "bye\n",
       "hello 1\n",
-      "bye\n"
+      "bye\n",
+      "結束\n"
      ]
     }
    ],
    "source": [
     "s = \"MGT201\"\n",
-    "for ch in s:\n",
-    "    print(\"hello \" + ch)\n",
-    "    print(\"bye\")"
+    "for fuck in s:\n",
+    "    print(\"hello \" + fuck)\n",
+    "    print(\"bye\")\n",
+    "\n",
+    "print('結束')"
    ]
   },
   {
@@ -237,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -245,39 +227,39 @@
      "output_type": "stream",
      "text": [
       "apple\n",
-      "VOWEL\n",
-      "LETTER\n",
-      "LETTER\n",
-      "LETTER\n",
-      "VOWEL\n",
+      "a is a VOWEL\n",
+      "p is a LETTER\n",
+      "p is a LETTER\n",
+      "l is a LETTER\n",
+      "e is a VOWEL\n",
       "banana\n",
-      "LETTER\n",
-      "VOWEL\n",
-      "LETTER\n",
-      "VOWEL\n",
-      "LETTER\n",
-      "VOWEL\n",
+      "b is a LETTER\n",
+      "a is a VOWEL\n",
+      "n is a LETTER\n",
+      "a is a VOWEL\n",
+      "n is a LETTER\n",
+      "a is a VOWEL\n",
       "carrot\n",
-      "LETTER\n",
-      "VOWEL\n",
-      "LETTER\n",
-      "LETTER\n",
-      "VOWEL\n",
-      "LETTER\n"
+      "c is a LETTER\n",
+      "a is a VOWEL\n",
+      "r is a LETTER\n",
+      "r is a LETTER\n",
+      "o is a VOWEL\n",
+      "t is a LETTER\n"
      ]
     }
    ],
    "source": [
     "items = ['apple', 'banana', 'carrot']\n",
-    "for item in items:\n",
-    "    print(item)\n",
-    "    for ch in item:\n",
-    "        if ch in 'aeiouAEIOU':\n",
-    "            print('VOWEL')\n",
-    "        elif ch.isdigit():\n",
-    "            print('NUMBER')\n",
+    "for shit in items:\n",
+    "    print(shit)\n",
+    "    for fk in shit:\n",
+    "        if fk in 'aeiouAEIOU':\n",
+    "            print(fk + ' is a VOWEL')\n",
+    "        elif fk.isdigit():\n",
+    "            print(fk + ' is a NUMBER')\n",
     "        else:\n",
-    "            print('LETTER')"
+    "            print(fk + ' is a LETTER')"
    ]
   },
   {
@@ -308,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +335,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(1, 9, 3):\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +416,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(): \u001b[39m# 會有 Error!!!\u001b[39;00m\n\u001b[1;32m      2\u001b[0m     \u001b[39mprint\u001b[39m(n)\n",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(): \u001b[39m# 會有 Error!!!\u001b[39;00m\n\u001b[1;32m      2\u001b[0m     \u001b[39mprint\u001b[39m(n)\n",
       "\u001b[0;31mTypeError\u001b[0m: range expected at least 1 argument, got 0"
      ]
     }
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +522,7 @@
    ],
    "source": [
     "name = 'Anya'\n",
-    "for i in range(len(name)):\n",
+    "for i in range(0, len(name), 1):\n",
     "    print(name[i])"
    ]
   },
@@ -550,10 +552,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "2\n",
+      "4\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "\n",
+      "2\n",
+      "0\n",
+      "2\n",
+      "4\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "\n",
+      "2\n",
+      "0\n",
+      "2\n",
+      "4\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [2, 0, 2, 4, 0, 1, 2, 0]\n",
+    "\n",
+    "for num in nums:\n",
+    "    print(num)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "for i in range(0, len(nums), 1):\n",
+    "    print(nums[i])\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "i = 0\n",
+    "while i < len(nums):\n",
+    "    print(nums[i])\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "11\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [2, 0, 2, 4, 0, 1, 2, 0]\n",
+    "\n",
+    "總和 = 0\n",
+    "for num in nums:\n",
+    "    總和 = 總和 + num\n",
+    "print(總和)\n",
+    "\n",
+    "\n",
+    "total = 0\n",
+    "for i in range(0, len(nums), 1):\n",
+    "    total = total + nums[i]\n",
+    "print(total)\n",
+    "\n",
+    "total = 0\n",
+    "i = 0\n",
+    "while i < len(nums):\n",
+    "    total += nums[i]\n",
+    "    i += 1\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [2, 0, 2, 4, 0, 1, 2, 0]\n",
+    "\n",
+    "even_sum = 0\n",
+    "for num in nums:\n",
+    "    if num % 2 == 0:\n",
+    "        even_sum += num\n",
+    "print(even_sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [2, 0, 2, 4, 0, 1, 2, 0]\n",
+    "\n",
+    "num_of_even = 0\n",
+    "for num in nums:\n",
+    "    if num % 2 == 0:\n",
+    "        num_of_even += 1\n",
+    "print(num_of_even / len(nums) * 100)"
+   ]
   }
  ],
  "metadata": {
@@ -572,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
