--- a/ClassNotes/Types/1_Number_Boolean.ipynb
+++ b/ClassNotes/Types/1_Number_Boolean.ipynb
@@ -11,7 +11,6 @@
      "text": [
       "3\n",
       "8\n",
-      "1\n",
       "I'm learning programming\n",
       "1\n",
       "I'm learning programming\n",
@@ -23,7 +22,6 @@
    "source": [
     "print(1 + 2)\n",
     "print(3 + 5)\n",
-    "print(1)\n",
     "\n",
     "\n",
     "print(\"I'm learning programming\")\n",
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -132,38 +130,34 @@
      "output_type": "stream",
      "text": [
       "4\n",
-      "2.0\n",
       "8\n",
       "10\n",
       "25\n",
-      "3\n",
-      "2\n",
       "2\n",
       "1.67\n",
-      "2\n",
+      "2.0\n",
+      "3\n",
       "2\n"
      ]
     }
    ],
    "source": [
     "# 常用到的 function\n",
-    "import math\n",
-    "# from math import sqrt\n",
     "\n",
     "print(abs(-4))            # 絕對值\n",
-    "print(math.sqrt(4))       # 根號\n",
     "print(pow(2, 3))          # 2^3, 2的3次方\n",
     "print(min(10, 25, 15))    # 最小值\n",
     "print(max(10, 25, 15))    # 最大值\n",
-    "print(math.ceil(2.1))     # 直接往上取整\n",
-    "print(math.floor(2.9))    # 直接往下取整\n",
     "\n",
     "print(round(1.66666))     \n",
     "print(round(1.66666, 2))  # 小数点 后两位\n",
     "\n",
-    "# 4捨,6入, .5 往最接近的 偶數 (even number) 取整\n",
-    "print(round(1.5)) \n",
-    "print(round(2.5))\n"
+    "import math\n",
+    "# from math import sqrt\n",
+    "\n",
+    "print(math.sqrt(4))       # 根號\n",
+    "print(math.ceil(2.1))     # 直接往上取整\n",
+    "print(math.floor(2.9))    # 直接往下取整\n"
    ]
   },
   {
@@ -175,9 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello~~~\n"
+     ]
+    },
     {
      "ename": "ValueError",
      "evalue": "invalid literal for int() with base 10: 'a'",
@@ -185,15 +186,18 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# print(3 / 0)    # ZeroDivisionError\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# print(3 + \"2\")  # TypeError\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mint\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39ma\u001b[39;49m\u001b[39m\"\u001b[39;49m)) \u001b[39m# ValueError\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[17], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mHello~~~\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[39m# print(3 / 0)    # ZeroDivisionError\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# print(3 + \"2\")  # TypeError\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mint\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39ma\u001b[39;49m\u001b[39m\"\u001b[39;49m)) \u001b[39m# ValueError\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mbye!!\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'a'"
      ]
     }
    ],
    "source": [
+    "print('Hello~~~')\n",
     "# print(3 / 0)    # ZeroDivisionError\n",
     "# print(3 + \"2\")  # TypeError\n",
-    "print(int(\"a\")) # ValueError"
+    "print(int(\"a\")) # ValueError\n",
+    "\n",
+    "print('bye!!')\n"
    ]
   },
   {
@@ -259,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +282,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mFalse\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39m3\u001b[39m \u001b[39m/\u001b[39m \u001b[39m0\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[39m# 把 or 改成 and 就會報錯\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m2\u001b[39m \u001b[39m==\u001b[39m \u001b[39m2.0\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39m3\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m2\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m==\u001b[39m \u001b[39m5\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[19], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mFalse\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39m3\u001b[39m \u001b[39m/\u001b[39m \u001b[39m0\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[39m# 把 or 改成 and 就會報錯\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m2\u001b[39m \u001b[39m==\u001b[39m \u001b[39m2.0\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39m3\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m2\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m==\u001b[39m \u001b[39m5\u001b[39m)\n",
       "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
@@ -318,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
