--- a/ClassNotes/Types/4_Tuple.ipynb
+++ b/ClassNotes/Types/4_Tuple.ipynb
@@ -176,6 +176,29 @@
     "\n",
     "print(x, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vc tse 18\n",
+      "alice chen 2\n",
+      "bob zhang 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "info_lst = [['vc', 'tse', 18], ['alice', 'chen', 2], ['bob', 'zhang', 3]]\n",
+    "\n",
+    "for first_name, last_name, age in info_lst:\n",
+    "    print(first_name, last_name, age)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
