--- a/ClassNotes/Types/5_Dict.ipynb
+++ b/ClassNotes/Types/5_Dict.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,18 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vincent got 4.0 on MGT201\n",
-      "Alice got 2.7 on MGT201\n",
-      "Peter got 4.0 on MGT201\n",
-      "Bob got 0.7 on MGT201\n",
-      "\n",
       "Vincent got 4.0 on MGT201\n",
       "Alice got 2.7 on MGT201\n",
       "Peter got 4.0 on MGT201\n",
@@ -266,11 +261,7 @@
     "\n",
     "for name in name_to_gpa:\n",
     "    gpa = name_to_gpa[name]\n",
-    "    print(f'{name} got {gpa} on MGT201')\n",
-    "print()\n",
-    "\n",
-    "for name in name_to_gpa.keys():\n",
-    "    gpa = name_to_gpa[name]\n",
+    "    # print(name + ' got ' + str(gpa) + ' on MGT201')\n",
     "    print(f'{name} got {gpa} on MGT201')\n",
     "print()\n",
     "\n",
@@ -309,6 +300,7 @@
     "name_to_gpa = {'Vincent': 4.0, 'Alice': 2.7, 'Peter': 4.0, 'Bob': 0.7}\n",
     "\n",
     "gpa_to_name = {}\n",
+    "\n",
     "for name in name_to_gpa:\n",
     "    gpa = name_to_gpa[name]\n",
     "    # 如果 pga 已經在 result 裡, 要通過.append() 把名字 加進去\n",
