--- a/Assignments/a1.ipynb
+++ b/Assignments/a1.ipynb
@@ -123,8 +123,8 @@
     "    #     break\n",
     "    \n",
     "    if 員工號碼 not in 數據字典:\n",
-    "        # 數據字典[員工號碼] = {600: 0, 250: 0, 50: 0, 10: 0}\n",
-    "        數據字典[員工號碼] = {}\n",
+    "        數據字典[員工號碼] = {600: 0, 250: 0, 50: 0, 10: 0}\n",
+    "        # 數據字典[員工號碼] = {}\n",
     "\n",
     "    門票組合 = int(input('輸入combination (600, 250, 50, 10): '))\n",
     "    # if 門票組合 < 0:\n",
@@ -137,11 +137,11 @@
     "        門票組合 = int(input('請重新輸入combination (600, 250, 50, 10): '))\n",
     "\n",
     "    # increase the number of purchase of the corresponding emp id and combination by 1\n",
-    "    # 數據字典[員工號碼][門票組合] += 1\n",
-    "    if 門票組合 in 數據字典[員工號碼]:\n",
-    "        數據字典[員工號碼][門票組合] += 1\n",
-    "    else:\n",
-    "        數據字典[員工號碼][門票組合] = 1\n",
+    "    數據字典[員工號碼][門票組合] += 1\n",
+    "    # if 門票組合 in 數據字典[員工號碼]:\n",
+    "    #     數據字典[員工號碼][門票組合] += 1\n",
+    "    # else:\n",
+    "    #     數據字典[員工號碼][門票組合] = 1\n",
     "\n",
     "    quit = input('請問你要結束嗎? (y/n) ')\n",
     "    if quit == 'y':\n",
@@ -205,91 +205,6 @@
     "        print(f' 一共 {組合賣出總價格} 的總價格')\n",
     "        print(f' 一共 {組合賣出總數量} 的總票數量')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Report1:\n",
-      "Employee ID: A, Total Amount Sold: $50, Total Tickets Sold: 1\n",
-      "Overall Total Amount Sold: $50\n",
-      "Overall Total Tickets Sold: 1\n",
-      "\n",
-      "Report2:\n",
-      "Ticket Combination: 600-ticket\n",
-      "Number of Purchases: 0\n",
-      "Dollar Amount Collected: $0\n",
-      "\n",
-      "Ticket Combination: 250-ticket\n",
-      "Number of Purchases: 1\n",
-      "Dollar Amount Collected: $50\n",
-      "\n",
-      "Ticket Combination: 50-ticket\n",
-      "Number of Purchases: 0\n",
-      "Dollar Amount Collected: $0\n",
-      "\n",
-      "Ticket Combination: 10-ticket\n",
-      "Number of Purchases: 0\n",
-      "Dollar Amount Collected: $0\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# create dictionary to show the price for each combination\n",
-    "combination = {600: 100, 250: 50, 50: 25, 10: 15}\n",
-    "\n",
-    "\n",
-    "# create empty dictionary to show data \n",
-    "Data = {}\n",
-    "while True:\n",
-    "    employee_ID = input('enter ID or enter END to indicate the end: ')\n",
-    "    \n",
-    "    \n",
-    "    if employee_ID not in Data:\n",
-    "        Data[employee_ID] = {600: 0, 250: 0, 50: 0, 10: 0}\n",
-    "\n",
-    "# need to validate our input, so its one of the four combination\n",
-    "    while True:\n",
-    "        ticket_combination = int(input('enter combination (600, 250, 50, 10): '))\n",
-    "        if ticket_combination in combination:\n",
-    "            Data[employee_ID][ticket_combination] += 1 # increase number of combination sold of the corresponding employee id by 1\n",
-    "            break\n",
-    "        else:\n",
-    "            print('Invalid Input')  # cheack no negative purchases\n",
-    "\n",
-    "    END = input('Whether or not to end')\n",
-    "    if END == 'yes':\n",
-    "        break\n",
-    "             \n",
-    "# now create total_tickets and total_amounted to report the total dollar amount and the total number of tickets that employees sold\n",
-    "total_amount_sold = 0\n",
-    "total_tickets_sold = 0\n",
-    "\n",
-    "print(\"\\nReport1:\") #this is my report, using \\n is to insert a newline, creating a line break in the output\n",
-    "for employee, data in Data.items(): #using the in keyword to check if a key exists in a dictionary before trying to access it\n",
-    "    total_amount = sum(combination[comb] * count for comb, count in data.items()) #accoring to MGT201 Reference Notes\n",
-    "    total_tickets = sum(data.values())\n",
-    "    print(f\"Employee ID: {employee}, Total Amount Sold: ${total_amount}, Total Tickets Sold: {total_tickets}\") # show the summary about The number of tickets they sell and the price gain corresponding to each employee\n",
-    "    total_amount_sold += total_amount\n",
-    "    total_tickets_sold += total_tickets\n",
-    "\n",
-    "print(f\"Overall Total Amount Sold: ${total_amount_sold}\")    \n",
-    "print(f\"Overall Total Tickets Sold: {total_tickets_sold}\")\n",
-    "\n",
-    "print(\"\\nReport2:\")\n",
-    "for comb, price in combination.items():\n",
-    "    total_purchases = sum(data[comb] for data in Data.values())\n",
-    "    print(f\"Ticket Combination: {comb}-ticket\")\n",
-    "    print(f\"Number of Purchases: {total_purchases}\")\n",
-    "    print(f\"Dollar Amount Collected: ${total_purchases * price}\\n\")"
-   ]
   }
  ],
  "metadata": {
@@ -308,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
