--- a/ClassNotes/Statements/4_FileIO.ipynb
+++ b/ClassNotes/Statements/4_FileIO.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -335,46 +335,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'alice': {'MGT201': 95.0, 'MAT135': 70.0}, 'bob': {'MGT220': 80.0, 'MAT135': 67.0}, 'carol': {'MGT201': 80.0}, 'vincent': {'MGT201': 90.0}}\n"
+      "{'alice': {'MGT201': 95, 'MAT135': 70}, 'bob': {'MGT220': 80, 'MAT135': 67}, 'carol': {'MGT201': 80}, 'vincent': {'MGT201': 90}}\n"
      ]
     }
    ],
    "source": [
-    "student_marks = {}\n",
-    "# ------------------------------------\n",
-    "f = open(\"FileIO_files/grades.txt\", \"r\")\n",
-    "# skip the header\n",
-    "f.readline()\n",
-    "\n",
-    "# read the rest until we reach '---'\n",
-    "line = f.readline()\n",
-    "while not line.startswith('---'): # line != '---\\n' OR line.strip() != '---' OR line[:3] != '---'\n",
-    "    s, c, g = line.strip().split(',')\n",
-    "    \n",
-    "    if s in student_marks:\n",
-    "        student_marks[s][c] = float(g)\n",
-    "    else:\n",
-    "        student_marks[s] = {c: float(g)}\n",
-    "\n",
-    "    # 回去之前 讀下一行\n",
-    "    line = f.readline()\n",
+    "# midterm 第一步\n",
+    "f = open(\"FileIO_files/grades.csv\", 'r')\n",
+    "data = f.readlines()[1:] # <-----\n",
     "f.close()\n",
     "\n",
-    "print(student_marks)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "part 2) Given the student dictionary generated above, create a new dictionary that maps student to their average mark"
+    "d = {}\n",
+    "\n",
+    "for row in data:\n",
+    "    row = row.strip('\\n') # 第二步 刪掉 回車鍵\n",
+    "    info = row.split(',') # 第三步 用 , 分開\n",
+    "\n",
+    "    name = info[0]\n",
+    "    course = info[1]\n",
+    "    grade = int(info[2])\n",
+    "\n",
+    "    # name, course, grade = info\n",
+    "    # grade = int(grade)\n",
+    "    \n",
+    "    # print(name, course, grade)\n",
+    "    if name in d:\n",
+    "        #   k           k2      v2\n",
+    "        d[name]     [course] = grade\n",
+    "    else:\n",
+    "        #  k             v\n",
+    "        d[name] = {course: grade}\n",
+    "\n",
+    "print(d)\n"
    ]
   },
   {
@@ -383,49 +382,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "student_marks = {\n",
-    "  'alice': {'MGT201': 95.0, 'MAT135': 70.0}, \n",
-    "  'bob': {'MGT220': 80.0, 'MAT135': 67.0}, \n",
-    "  'carol': {'MGT201': 80.0}, \n",
-    "  'vincent': {'MGT201': 90.0}\n",
+    "'''\n",
+    "d => {\n",
+    "    'alice': {'MGT201: 95,    'MAT135': 70  },\n",
+    "    'bob': {'MGT220': 80}\n",
+    "\n",
+    "\n",
+    "\n",
     "}\n",
     "\n",
-    "expected = {\n",
-    "  \"MGT201\": 83.33,\n",
-    "  \"MAT135\": 68.5,\n",
-    "  \"MGT220\": 80.0\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'MGT201': 88.33333333333333, 'MAT135': 68.5, 'MGT220': 80.0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp = {}\n",
-    "for s in student_marks:\n",
-    "  for c in student_marks[s]:\n",
-    "    g = student_marks[s][c]\n",
-    "\n",
-    "    if c in temp:\n",
-    "        temp[c].append(g)\n",
-    "    else:\n",
-    "        temp[c] = [g]\n",
-    "\n",
-    "course_avg = {}\n",
-    "for c in temp:\n",
-    "    course_avg[c] = sum(temp[c]) / len(temp[c])   \n",
-    "\n",
-    "print(course_avg)\n"
+    "'''"
    ]
   }
  ],
