--- a/ClassNotes/Statements/5_Function.ipynb
+++ b/ClassNotes/Statements/5_Function.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "My gpa is 4.0\n",
       "My gpa is 4.0\n",
       "My gpa is 4.0\n",
       "My gpa is 4.0\n"
@@ -20,55 +21,60 @@
     "\n",
     "print('My gpa is ' + str(gpa))\n",
     "print('My gpa is {}'.format(gpa))\n",
-    "print(f'My gpa is {gpa}')"
+    "print(f'My gpa is {gpa}')\n",
+    "print('My gpa is %.1f' % gpa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello my name is Vincent and I am 18 years old\n",
-      "Vincent will proably die within 82 years\n",
-      "Hello my name is Alice and I am 20 years old\n",
-      "Vincent will proably die within 80 years\n"
+      "Hello my name is Vincent and I am 3 years old\n",
+      "Vincent will probably die within 97 years\n",
+      "bye~~\n"
      ]
     }
    ],
    "source": [
     "def tell_the_truth(name, age):\n",
-    "  print(f'Hello my name is {name} and I am {age} years old')\n",
-    "  print(f'Vincent will proably die within {100 - age} years')\n",
+    "    print(f'Hello my name is {name} and I am {age} years old')\n",
+    "    print(f'Vincent will probably die within {100 - age} years')\n",
+    "    print('bye~~')\n",
     "\n",
-    "tell_the_truth(\"Vincent\", 18)\n",
-    "tell_the_truth(\"Alice\", 20)"
+    "tell_the_truth('Vincent', 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello my name is Brian and I am 50 years old\n",
-      "Vincent will proably die within 50 years\n"
+      "heeeeee\n",
+      "Hello my name is Anya and I am 15 years old\n",
+      "Vincent will probably die within 85 years\n",
+      "bye~~\n",
+      "wahahahaha\n"
      ]
     }
    ],
    "source": [
-    "tell_the_truth(\"Brian\", 50)"
+    "print('heeeeee')\n",
+    "tell_the_truth('Anya', 15)\n",
+    "print('wahahahaha')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +88,8 @@
    ],
    "source": [
     "def greeting():\n",
-    "  print(\"Hello!!\")\n",
-    "  print(\"how are you~~~\")\n",
+    "    print(\"Hello!!\")\n",
+    "    print(\"how are you~~~\")\n",
     "\n",
     "greeting()"
    ]
@@ -97,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -105,17 +111,17 @@
      "output_type": "stream",
      "text": [
       "100.0\n",
-      "The area is : None\n"
+      "The area is: None\n"
      ]
     }
    ],
    "source": [
     "def triangle_area(base, height):\n",
-    "  area = base * height * 0.5\n",
-    "  print(area)\n",
+    "    area = base * height * 0.5\n",
+    "    print(area)\n",
     "\n",
     "res = triangle_area(10, 20)\n",
-    "print(f'The area is : {res}')"
+    "print(f'The area is: {res}')"
    ]
   },
   {
@@ -127,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The area is : 100.0\n"
+      "The area is: 100.0\n"
      ]
     }
    ],
@@ -144,36 +150,37 @@
     "  return area\n",
     "\n",
     "res = triangle_area(10, 20)\n",
-    "print(f'The area is : {res}')"
+    "print(f'The area is: {res}')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Examples\n",
     "\n",
-    "Write a function that takes in a string and return True iff it contains a digit, other False"
+    "Write a function that takes in a string and return True iff it contains a vowel, other False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def contains_digit(s):\n",
-    "  for ch in s:\n",
-    "    if ch.isdigit():\n",
-    "      return True\n",
-    "    # else:\n",
-    "      # return False\n",
-    "  return False"
+    "    for ch in s:\n",
+    "        if ch in 'aeiouAEIOU':\n",
+    "            return True\n",
+    "        # else:\n",
+    "            # return False\n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -181,131 +188,105 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "print(contains_digit('mgt201'))\n",
-    "print(contains_digit('Anya'))"
+    "print(contains_digit('Vincent')) # False\n",
+    "print(contains_digit('mgt201')) # False\n",
+    "print(contains_digit('Anya'))   # True"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that takes in a string and return the number of digits"
+    "Write a function that takes in a list of numbers and return True if and only if the list contains no negative number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def count_digits(s):\n",
-    "  count = 0\n",
-    "  for ch in s:\n",
-    "    if ch.isdigit():\n",
-    "      count += 1\n",
-    "  return count\n",
-    "\n",
-    "print(count_digits('MGT201'))\n",
-    "print(count_digits('Anya Waku Waku~~'))"
+    "def no_negative(L):\n",
+    "    for num in L:\n",
+    "        if num < 0:\n",
+    "            return False\n",
+    "    return True"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that takes in a list of string and return the total number of digits of each string"
+    "Write a function that takes in a list of numbers and return the number of even numbers in the list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def count_total_digits(L):\n",
-    "  count = 0\n",
-    "  for s in L:\n",
-    "    count += count_digits(s)\n",
-    "  return count\n",
-    "\n",
-    "print(count_total_digits(['MGT201', 'I am 18 years old', '666']))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tracing"
+    "def count_even(L):\n",
+    "    count = 0\n",
+    "    for num in L:\n",
+    "        if num % 2 == 0:\n",
+    "            count += 1\n",
+    "    return count\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n",
-      "1 -1 3\n",
-      "Hello\n",
-      "-6\n",
-      "None -1 3\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [20], line 17\u001b[0m\n\u001b[1;32m     15\u001b[0m x \u001b[38;5;241m=\u001b[39m func2(y, func1(z, x))\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(x, y, z)\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def func1(x, y):\n",
-    "  print('Hello')\n",
-    "  a = y - x\n",
-    "  return a\n",
+    "count_even([2024, 2, 10, 3, 27, 8, 5, 3]) # 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_all_even(L):\n",
+    "    count = 0\n",
+    "    for sub in L:\n",
+    "        count += count_even(sub)\n",
+    "    return count\n",
     "\n",
-    "def func2(x, y):\n",
-    "  x = y * z\n",
-    "  print(x)\n",
     "\n",
-    "x = 1\n",
-    "y = 2\n",
-    "z = 3\n",
-    "y = func1(y, x)\n",
-    "print(x, y, z)\n",
-    "x = func2(y, func1(z, x))\n",
-    "print(x, y, z)\n",
-    "print(a)"
+    "count_all_even([[2024, 2, 10], [3, 27], [8, 5, 3]]) # 4"
    ]
   }
  ],
