added changes for assignment 2

--- a/Midterm Review/String_and_List.ipynb
+++ b/Midterm Review/String_and_List.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "def triple_cut(s: str, i: int, j: int) -> str:\n",
-    "    ...\n",
+    "    return s[j+1:] + s[i:j+1] + s[:i]\n",
     "\n",
     "print(triple_cut('ABCDEFGHIJKL', 2, 6)) # 'HIJKLCDEFGAB'"
    ]
@@ -59,12 +59,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 shot vanilla latte with almond milk\n",
+      "1 shot pumpkin spice latte with 2% milk\n",
+      "3 shot latte with soy milk\n"
+     ]
+    }
+   ],
    "source": [
     "def latte_order(shots: int, milk: str, flavour: str) -> str:\n",
-    "    ...\n",
+    "    res = '%d shot' % shots\n",
+    "    if flavour != '':\n",
+    "        res += ' %s' % flavour\n",
+    "    \n",
+    "    res += ' latte with '\n",
+    "\n",
+    "    if milk == 'A':\n",
+    "        res += 'almond milk'\n",
+    "    elif milk == 'S':\n",
+    "        res += 'soy milk'\n",
+    "    else:\n",
+    "        res += '%s milk' % milk\n",
+    "    \n",
+    "    return res\n",
+    "\n",
     "\n",
     "print(latte_order(2, 'A', 'vanilla'))           # 2 shot vanilla latte with almond milk\n",
     "print(latte_order(1, '2%', 'pumpkin spice'))    # 1 shot pumpkin spice latte with 2% milk\n",
@@ -889,8 +913,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
