--- a/Past Midterm/2023F/2023F_midterm.ipynb
+++ b/Past Midterm/2023F/2023F_midterm.ipynb
@@ -113,6 +113,50 @@
    "source": [
     "count_char(\"mississippi\", 's')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def largest_factor(n):\n",
+    "    factor = 1\n",
+    "    for i in range(2, n):\n",
+    "        if n % i == 0:\n",
+    "            factor = i\n",
+    "    \n",
+    "    return factor\n",
+    "\n",
+    "print(largest_factor(28))\n",
+    "print(largest_factor(45))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def largest_factor(n):\n",
+    "    for i in range(n-1, 1, -1):\n",
+    "        if n % i == 0:\n",
+    "            return i\n",
+    "    \n",
+    "    return 1\n",
+    "\n",
+    "print(largest_factor(28))\n",
+    "print(largest_factor(45))"
+   ]
   }
  ],
  "metadata": {
@@ -131,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
