added midterm review p1

--- a/Midterm Review/Dict.ipynb
+++ b/Midterm Review/Dict.ipynb
@@ -14,8 +14,17 @@
    "outputs": [],
    "source": [
     "def get_membership(clubs_to_members: dict[str, list[str]]) -> dict[str, list[str]]:\n",
-    "    ...\n",
+    "    result = {}\n",
     "\n",
+    "    for club in clubs_to_members:\n",
+    "        members = clubs_to_members[club]\n",
+    "        for member in members:\n",
+    "            \n",
+    "            if member not in result:\n",
+    "                result[member] = []\n",
+    "            result[member].append(club)\n",
+    "    \n",
+    "    return result\n",
     "\n",
     "\n",
     "clubs_to_members = {\n",
@@ -46,12 +55,28 @@
    "outputs": [],
    "source": [
     "def can_fill_order(order_dict: dict[str, str], inventory_dict: dict[str, int]) -> bool:\n",
-    "    ...\n",
+    "    needed = {}\n",
+    "\n",
+    "    for prod in order_dict.values():\n",
+    "        if prod not in needed:\n",
+    "            needed[prod] = 0\n",
+    "        needed[prod] += 1\n",
+    "\n",
+    "    for prod in needed:\n",
+    "        if prod not in inventory_dict:\n",
+    "            return False\n",
+    "        if needed[prod] > inventory_dict[prod]:\n",
+    "            return False\n",
+    "        \n",
+    "    return True\n",
     "\n",
     "inventory = {'shirt': 2, 'mug': 2}\n",
     "print(can_fill_order({'Ann': 'mug', 'Bob': 'mug', 'Lee': 'mug'}, inventory))    # False\n",
     "print(can_fill_order({'Ann': 'shirt', 'Bob': 'mug', 'Lee': 'mug'}, inventory))  # True\n",
-    "print(can_fill_order({'Ann': 'mug', 'Bob': 'mug', 'Lee': 'hat'}, inventory))    # False"
+    "print(can_fill_order({'Ann': 'mug', 'Bob': 'mug', 'Lee': 'hat'}, inventory))    # False\n",
+    "\n",
+    "# needed => {'shirt': 1, 'mug': 2}\n",
+    "# needed => {'mug': 2, 'hat': 1}"
    ]
   },
   {
@@ -80,6 +105,60 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read a csv file of the polulation of the world and Find the total population of each continents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'North America': {'Cananda': {'Toronto': 5000, 'Montreal': 2000}, 'USA': {'New York': 50}}, 'Asia': {'China': {'北京': 10000}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('population.csv', 'r')\n",
+    "lines = f.readlines() # 這是一個list\n",
+    "f.close()\n",
+    "\n",
+    "# 根據 file 的內容 可以選擇要skip 前幾行 (header)\n",
+    "lines = lines[1:] \n",
+    "\n",
+    "data = {}\n",
+    "\n",
+    "for line in lines:\n",
+    "    # 第一步: 先把最後的回車鍵 '\\n'刪掉\n",
+    "    line = line.strip()\n",
+    "    # 第二步: 利用 ',' 把這個 str 分開成一個 list of str\n",
+    "    info = line.split(',')\n",
+    "\n",
+    "    cont = info[0]\n",
+    "    coun = info[1]\n",
+    "    city = info[2]\n",
+    "    ppl = int(info[3])\n",
+    "\n",
+    "    if cont not in data:\n",
+    "        data[cont] = {}\n",
+    "    \n",
+    "    if coun not in data[cont]:\n",
+    "        data[cont][coun] = {}\n",
+    "    \n",
+    "    data[cont][coun][city] = ppl\n",
+    "\n",
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,7 +172,16 @@
    "outputs": [],
    "source": [
     "def find_population(continent_info: dict[str, dict[str, dict[str, int]]]) -> dict[str,int]:\n",
-    "    ...\n",
+    "    res = {}\n",
+    "\n",
+    "    for cont in continent_info:\n",
+    "        res[cont] = 0\n",
+    "\n",
+    "        for coun in continent_info[cont]:\n",
+    "            for city in continent_info[cont][coun]:\n",
+    "                res[cont] += continent_info[cont][coun][city]\n",
+    "\n",
+    "    return res\n",
     "\n",
     "data = {\n",
     "    'North America': {\n",
@@ -102,8 +190,8 @@
     "        'Mexico': {'Mexico City': 10000}},\n",
     "    'Asia': {\n",
     "        'Thailand': {'Bangkok': 456}, \n",
-    "        'Japan': {'Tokyo': 10000, 'Osaka': 5000}, \n",
-    "        'Antarctica': {}}\n",
+    "        'Japan': {'Tokyo': 10000, 'Osaka': 5000}},\n",
+    "    'Antarctica': {}\n",
     "}\n",
     "\n",
     "print(find_population(data))\n",
@@ -346,8 +434,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
