--- a/Midterm Review/String_and_List.ipynb
+++ b/Midterm Review/String_and_List.ipynb
@@ -117,13 +117,13 @@
    "outputs": [],
    "source": [
     "def year_of_study(num_of_courses: int) -> str:\n",
-    "    if ...: # A\n",
-    "        if ...: # B\n",
+    "    if num_of_courses >= 10: # A\n",
+    "        if num_of_courses > 40: # B\n",
     "            return 'fifth-year or more'\n",
     "        else:\n",
-    "            if ...: # C\n",
+    "            if num_of_courses >= 21 and num_of_courses < 31: # C\n",
     "                return 'third-year'\n",
-    "            elif ...: # D\n",
+    "            elif num_of_courses >= 31: # D\n",
     "                return 'fourth-year'\n",
     "            return 'second-year'\n",
     "    else:\n",
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "def example1(x: int, y: int, z: str) -> bool:\n",
-    "    ..."
+    "    return (x >= y and str(x) in z) or (x < y and str(x) not in z and str(y) not in z)"
    ]
   },
   {
@@ -292,7 +292,10 @@
    "outputs": [],
    "source": [
     "def no_vowels(text: str) -> bool:\n",
-    "    ...\n",
+    "    for ch in text:\n",
+    "        if ch in 'aeiouAEIOU':\n",
+    "            return False\n",
+    "    return True\n",
     "\n",
     "print(no_vowels('xyz'))         # True\n",
     "print(no_vowels('Vincent'))     # False"
@@ -312,7 +315,10 @@
    "outputs": [],
    "source": [
     "def contains_number(text: str) -> bool:\n",
-    "    ...\n",
+    "    for ch in text:\n",
+    "        if ch in '0123456789': # if ch.isdigit():\n",
+    "            return True\n",
+    "    return False\n",
     "\n",
     "print(contains_number('mgt201'))         # True\n",
     "print(contains_number('vincent'))       # False"
@@ -334,7 +340,13 @@
    "outputs": [],
    "source": [
     "def is_valid_phone_number(s: str) -> bool:\n",
-    "    ...\n",
+    "    if len(s) < 10:\n",
+    "        return False\n",
+    "    \n",
+    "    for ch in s:\n",
+    "        if ch not in '0123456789 -': # if not ch.isdigit() and ch not in '- ':\n",
+    "            return False\n",
+    "    return True\n",
     "\n",
     "print(is_valid_phone_number('416 123-4567'))    # True\n",
     "print(is_valid_phone_number('416 EAT-CAKE'))    # True\n",
@@ -356,10 +368,14 @@
    "outputs": [],
    "source": [
     "def has_3_consecutive_digits(s: str) -> bool:\n",
-    "    ...\n",
+    "    for i in range(len(s) - 2):\n",
+    "        if s[i:i+3].isdigit(): # WRONG: if s[i:i+3] in '0123456789'\n",
+    "            return True\n",
+    "    return False\n",
     "\n",
     "print(has_3_consecutive_digits('abc135xyz'))    # True\n",
-    "print(has_3_consecutive_digits('a1b2c3'))       # False"
+    "print(has_3_consecutive_digits('a1b2c3'))       # False\n",
+    "print(has_3_consecutive_digits('mgt201111 tmd hahaha'))       # False"
    ]
   },
   {
@@ -376,7 +392,23 @@
    "outputs": [],
    "source": [
     "def is_palindrome(word: str) -> bool:\n",
-    "    ...\n",
+    "    # return word == word[::-1]\n",
+    "\n",
+    "    # for i in range(len(word)):\n",
+    "    #     if word[i] != word[-i-1]:\n",
+    "    #         return False\n",
+    "    # return True\n",
+    "\n",
+    "    i = 0\n",
+    "    j = len(word) - 1\n",
+    "\n",
+    "    while i < j:\n",
+    "        if word[i] != word[j]:\n",
+    "            return False\n",
+    "        i += 1\n",
+    "        j -= 1\n",
+    "        \n",
+    "    return True\n",
     "\n",
     "\n",
     "print(is_palindrome('racecar'))     # True\n",
@@ -399,7 +431,12 @@
    "outputs": [],
    "source": [
     "def is_real_palindrome(text: str) -> bool:\n",
-    "    ...\n",
+    "    filtered = ''\n",
+    "    for ch in text.lower():\n",
+    "        if ch not in ' .,:;?!':\n",
+    "            filtered += ch\n",
+    "    \n",
+    "    return is_palindrome(filtered)\n",
     "\n",
     "print(is_real_palindrome(''))                                   # True\n",
     "print(is_real_palindrome('A Man, A Plan, A Canal: Panama!'))    # True\n",
@@ -467,7 +504,11 @@
    "outputs": [],
    "source": [
     "def count_vowels(s: str) -> int:\n",
-    "    ...\n",
+    "    count = 0\n",
+    "    for ch in s:\n",
+    "        if ch in 'aeiouAEIOU':\n",
+    "            count += 1\n",
+    "    return count\n",
     "\n",
     "print(count_vowels(\"Vincent\"))              # 2\n",
     "print(count_vowels(\"I like programming\"))   # 6"
@@ -487,9 +528,35 @@
    "outputs": [],
    "source": [
     "def count_total_vowels(lst: list[str]) -> int:\n",
-    "    ...\n",
+    "    count = 0\n",
+    "    for s in lst:\n",
+    "        count += count_vowels(s)\n",
+    "    return count\n",
     "\n",
     "print(count_total_vowels(['Vincent', 'I like programming', 'apple']))   # 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_total_vowels(lst: list[str]) -> int:\n",
+    "    result = []\n",
+    "    for s in lst:\n",
+    "        \n",
+    "        count = 0\n",
+    "\n",
+    "        for ch in s:\n",
+    "            if ch in 'aeiouAEIOU':\n",
+    "                count += 1\n",
+    "\n",
+    "        result.append(count)\n",
+    "                      \n",
+    "    return result\n",
+    "\n",
+    "print(count_total_vowels(['Vincent', 'I like programming', 'apple']))   # [2, 6, 2]"
    ]
   },
   {
@@ -508,7 +575,10 @@
    "outputs": [],
    "source": [
     "def start_with_same(lst: list[str], word: str) -> bool:\n",
-    "    ...\n",
+    "    for s in lst:\n",
+    "        if s[0] != word[0]:\n",
+    "            return False\n",
+    "    return True\n",
     "\n",
     "print(start_with_same(['my', 'midterm'], 'maybe'))          # True\n",
     "print(start_with_same(['abc', 'def', 'cab'], 'apple'))      # False"
@@ -528,8 +598,12 @@
    "outputs": [],
    "source": [
     "def count_start_with_same(lst: list[str], word_lst: list[str]) -> int:\n",
-    "    ...\n",
-    "\n",
+    "    number = 0\n",
+    "    for word in word_lst:\n",
+    "        if start_with_same(lst, word):\n",
+    "            number += 1\n",
+    "    return number\n",
+    "        \n",
     "print(start_with_same(['my', 'midterm'], ['maybe', 'mine', 'monster']))     # 3\n",
     "print(start_with_same(['my', 'midterm', 'max'], ['maybe', 'no']))           # 1"
    ]
@@ -550,7 +624,12 @@
    "outputs": [],
    "source": [
     "def has_even_num_of_char(s: str, ch: str) -> bool:\n",
-    "    ...\n",
+    "    count = 0\n",
+    "    for c in s:\n",
+    "        if c == ch:\n",
+    "            count += 1\n",
+    "            \n",
+    "    return count % 2 == 0\n",
     "\n",
     "print(has_even_num_of_char('hello', 'l'))   # True\n",
     "print(has_even_num_of_char('hello', 'e'))   # False"
@@ -570,7 +649,11 @@
    "outputs": [],
    "source": [
     "def sum_even(lst: list[int]) -> int:\n",
-    "    ...\n",
+    "    even = 0\n",
+    "    for num in lst:\n",
+    "        if num % 2 == 0:\n",
+    "            even += num\n",
+    "    return even\n",
     "\n",
     "print(sum_even([1, 5, 2, 4, 6]))    # 12"
    ]
@@ -634,7 +717,11 @@
    "outputs": [],
    "source": [
     "def remove_vowel(s: str) -> str:\n",
-    "    ...\n",
+    "    new = ''\n",
+    "    for ch in s:\n",
+    "        if ch not in 'aeiouAEIOU':\n",
+    "            new += ch\n",
+    "    return new\n",
     "\n",
     "print(remove_vowel(\"Vincent\"))              # 'Vncnt'\n",
     "print(remove_vowel(\"I like Programming\"))   # ' lk Prgrmmng'"
@@ -695,10 +782,14 @@
    "outputs": [],
    "source": [
     "def even_only(lst: list[list[int]]) -> list[int]:\n",
-    "    ...\n",
+    "    res = []\n",
+    "    for sub in lst:\n",
+    "        for num in sub:\n",
+    "            if num % 2 == 0:\n",
+    "                res.append(num)\n",
+    "    return res\n",
     "\n",
-    "\n",
-    "print(even_only([[1, 2, 3], [7, 8, 9], [4, 62]]))   # [6, 8, 10, 4, 62]"
+    "print(even_only([[1, 2, 3], [7, 8, 10], [4, 62]]))   # [2, 8, 10, 4, 62]"
    ]
   },
   {
@@ -735,7 +826,13 @@
    "outputs": [],
    "source": [
     "def find_longest(names: list[str]) -> str:\n",
-    "    ...\n",
+    "    longest_name = names[0]\n",
+    "\n",
+    "    for i in range(1, len(names)):\n",
+    "        if len(names[i]) > len(longest_name):\n",
+    "            longest_name = names[i]\n",
+    "\n",
+    "    return longest_name\n",
     "\n",
     "print(find_longest(['alice', 'bob', 'vincent', 'coral']))  # vincent"
    ]
@@ -754,7 +851,19 @@
    "outputs": [],
    "source": [
     "def clean_text(text: str) -> str:\n",
-    "    ...\n",
+    "    i = 0\n",
+    "    while i < len(text):\n",
+    "        if text[i].isalnum():\n",
+    "            break\n",
+    "        i += 1\n",
+    "    \n",
+    "    j = len(text) - 1\n",
+    "    while j > -1:\n",
+    "        if text[j].isalnum():\n",
+    "            break\n",
+    "        j -= 1\n",
+    "    \n",
+    "    return text[i:j+1]\n",
     "\n",
     "\n",
     "print(clean_text('  ? 42mgt201:    !'))     # 42mgt201\n",
