--- a/Assignments/a2.ipynb
+++ b/Assignments/a2.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('a2.csv', 'w')\n",
+    "filename = input('Enter the filename you want to save to (.csv): ')\n",
+    "f = open(filename, 'w')\n",
     "# header\n",
     "f.write(\"Month,Inventory (Coats),Inventory (Belts),Averasge Cost per Coat ($),Average Cost per Belt\\n\")\n",
     "\n",
@@ -59,7 +60,8 @@
     }
    ],
    "source": [
-    "f = open('a2.csv', 'r')\n",
+    "filename = input('Enter the filename to read from: ')\n",
+    "f = open(filename, 'r')\n",
     "lines = f.readlines()\n",
     "lines = lines[1:] # 把 header 去掉\n",
     "# print(lines)\n",
@@ -333,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
