added midterm review p2

--- a/Assignments/a2.ipynb
+++ b/Assignments/a2.ipynb
@@ -317,6 +317,154 @@
     "    ... = coat_data[month][0] * coat_data[month][1]\n",
     "    ... = belt_data[month][0] * belt_data[month][1]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# option 2b\n",
+    "d = {\"Jan '23\": {\"Coat\": {\"Inventory\": 50, \"AvgCost\": 500}, \n",
+    "                 \"Belt\": {\"Inventory\": 83, \"AvgCost\": 25.00},\n",
+    "                 \"Sock\": {\"Inventory\": 10, \"AvgCost\": 5.00}},\n",
+    "\n",
+    "     \"Feb '23\": {\"Coat\": {\"Inventory\": 100, \"AvgCost\": 250}, \n",
+    "                 \"Belt\": {\"Inventory\": 77, \"AvgCost\": 12.00},\n",
+    "                 \"Sock\": {\"Inventory\": 5, \"AvgCost\": 3.00}}}\n",
+    "\n",
+    "\n",
+    "d2 = {\"Coat\": {\"Jan '23\": {\"Inventory\": 50, \"AvgCost\": 500}, \n",
+    "               \"Fen '23\": {\"Inventory\": 100, \"AvgCost\": 250}},\n",
+    "\n",
+    "      \"Belt\": {\"Jan '23\": {\"Inventory\": 83, \"AvgCost\": 25.00}, \n",
+    "               \"Fen '23\": {\"Inventory\": 77, \"AvgCost\": 12.00}},\n",
+    "    \n",
+    "      \"Sock\": {\"Jan '23\": {\"Inventory\": 10, \"AvgCost\": 5.00}, \n",
+    "               \"Fen '23\": {\"Inventory\": 5, \"AvgCost\": 3.00}}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Coat': {\"Jan '23\": {'Inventory': 50, 'AvgCost': 500}, \"Feb '23\": {'Inventory': 100, 'AvgCost': 250}}, 'Belt': {\"Jan '23\": {'Inventory': 83, 'AvgCost': 25.0}, \"Feb '23\": {'Inventory': 77, 'AvgCost': 12.0}}, 'Sock': {\"Jan '23\": {'Inventory': 10, 'AvgCost': 5.0}, \"Feb '23\": {'Inventory': 5, 'AvgCost': 3.0}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = {}\n",
+    "\n",
+    "for month in d:\n",
+    "    for item in d[month]:\n",
+    "        inv = d[month][item]['Inventory']\n",
+    "        avg = d[month][item]['AvgCost']\n",
+    "        \n",
+    "        if item not in res:\n",
+    "            res[item] = {}\n",
+    "        \n",
+    "        res[item][month] = {'Inventory': inv, 'AvgCost': avg}\n",
+    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"Jan '23\": 27125.0, \"Fen '23\": 25939.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d2 = {\"Coat\": {\"Jan '23\": {\"Inventory\": 50, \"AvgCost\": 500}, \n",
+    "               \"Fen '23\": {\"Inventory\": 100, \"AvgCost\": 250}},\n",
+    "\n",
+    "      \"Belt\": {\"Jan '23\": {\"Inventory\": 83, \"AvgCost\": 25.00}, \n",
+    "               \"Fen '23\": {\"Inventory\": 77, \"AvgCost\": 12.00}},\n",
+    "    \n",
+    "      \"Sock\": {\"Jan '23\": {\"Inventory\": 10, \"AvgCost\": 5.00}, \n",
+    "               \"Fen '23\": {\"Inventory\": 5, \"AvgCost\": 3.00}}}\n",
+    "\n",
+    "d3 = {\"Jan '23\": 27125.0,    # (50*500 + 83*25.00 + 10*5.00)\n",
+    "      \"Feb '23\": 25939.0}    # (100*250 + 77*12.00 + 5*3.00)}\n",
+    "\n",
+    "res = {}\n",
+    "for item in d2:\n",
+    "    for month in d2[item]:\n",
+    "        \n",
+    "        if month not in res:\n",
+    "            res[month] = 0\n",
+    "        \n",
+    "        res[month] += (d2[item][month]['Inventory'] * d2[item][month]['AvgCost'])\n",
+    "    \n",
+    "print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Coat': {'Inventory': 249, 'AvgCost': 250.63453815261045}, 'Belt': {'Inventory': 314, 'AvgCost': 11.337579617834395}, 'Sock': {'Inventory': 19, 'AvgCost': 5.473684210526316}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\"Jan '23\": {\"Coat\": {\"Inventory\": 50, \"AvgCost\": 500}, \n",
+    "                 \"Belt\": {\"Inventory\": 83, \"AvgCost\": 25.00},\n",
+    "                 \"Sock\": {\"Inventory\": 10, \"AvgCost\": 5.00}},\n",
+    "\n",
+    "     \"Feb '23\": {\"Coat\": {\"Inventory\": 100, \"AvgCost\": 250}, \n",
+    "                 \"Belt\": {\"Inventory\": 77, \"AvgCost\": 12.00},\n",
+    "                 \"Sock\": {\"Inventory\": 5, \"AvgCost\": 3.00}},\n",
+    "\n",
+    "     \"Mar '23\": {\"Coat\": {\"Inventory\": 66, \"AvgCost\": 155}, \n",
+    "                 \"Belt\": {\"Inventory\": 55, \"AvgCost\": 3.00},\n",
+    "                 \"Sock\": {\"Inventory\": 1, \"AvgCost\": 12.00}},\n",
+    "\n",
+    "     \"Apr '23\": {\"Coat\": {\"Inventory\": 33, \"AvgCost\": 66}, \n",
+    "                 \"Belt\": {\"Inventory\": 99, \"AvgCost\": 4.00},\n",
+    "                 \"Sock\": {\"Inventory\": 3, \"AvgCost\": 9.00}}}\n",
+    "\n",
+    "\n",
+    "d4 = {\"Coat\": {\"Inventory\": 50+100+66+33, \"AvgCost\": (50*500+100*250+66*155+33*66) / (50+100+66+33)},\n",
+    "      \"Belt\": ...}\n",
+    "\n",
+    "\n",
+    "res = {}\n",
+    "for month in d:\n",
+    "    for item in d[month]:\n",
+    "        inv = d[month][item]['Inventory']\n",
+    "        avg = d[month][item]['AvgCost']\n",
+    "\n",
+    "        if item not in res:\n",
+    "            res[item] = {'Inventory': 0, 'AvgCost': 0}\n",
+    "        \n",
+    "        res[item]['Inventory'] += inv\n",
+    "        res[item]['AvgCost'] += (inv * avg) # total cost\n",
+    "\n",
+    "\n",
+    "for item in res:\n",
+    "    res[item]['AvgCost'] = res[item]['AvgCost'] / res[item]['Inventory']\n",
+    "\n",
+    "print(res)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -335,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
