--- a/Midterm Review/String_and_List.ipynb
+++ b/Midterm Review/String_and_List.ipynb
@@ -604,8 +604,8 @@
     "            number += 1\n",
     "    return number\n",
     "        \n",
-    "print(start_with_same(['my', 'midterm'], ['maybe', 'mine', 'monster']))     # 3\n",
-    "print(start_with_same(['my', 'midterm', 'max'], ['maybe', 'no']))           # 1"
+    "print(count_start_with_same(['my', 'midterm'], ['maybe', 'mine', 'monster']))     # 3\n",
+    "print(count_start_with_same(['my', 'midterm', 'max'], ['maybe', 'no']))           # 1"
    ]
   },
   {
