--- a/Midterm Review/Dict.ipynb
+++ b/Midterm Review/Dict.ipynb
@@ -90,12 +90,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cats': [1, 2, 3], 'cats!!!': [4]}\n",
+      "{'i': [1, 3], 'think': [2], 'like': [4], 'mgt201.': [5]}\n"
+     ]
+    }
+   ],
    "source": [
     "def get_positions(text: str) -> dict[str, list[int]]:\n",
-    "    ...\n",
+    "    # text -> 'I think I like MGT201.'\n",
+    "    text = text.lower()\n",
+    "    # text -> 'i think i like mgt201.'\n",
+    "    words = text.split(' ')\n",
+    "    # => ['i', 'think', 'i', 'like', 'mgt201.']\n",
+    "    # i   0       1      2     3        4\n",
+    "    \n",
+    "    res = {}\n",
+    "    for i in range(len(words)):\n",
+    "        word = words[i]\n",
+    "\n",
+    "        if word not in res:\n",
+    "            res[word] = []\n",
+    "        res[word].append(i + 1)\n",
+    "\n",
+    "    return res\n",
     "\n",
     "print(get_positions('cats Cats CATS CATS!!!')) \n",
     "# {'cats': [1, 2, 3], 'cats!!!': [4]}\n",
@@ -199,33 +223,57 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Return a dictionary based on the data in walks where the keys are dog names; the values are dictionaries where the keys are dog walker names and the values are the total distance that walker walked a particular dog.\n",
-    "\n",
-    "`walks` is a list of tuples, where each tuple has the form \n",
-    "\n",
-    "`<dog name>, <walker name>, <distance walked>` representing a single walk."
+    "Read the csv file and ouput the total distance walked by each walker for each dog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Felix': {'Bob': 8, 'Ann': 1}, 'Fido': {'Bob': 2}, 'Fluffy': {'Ann': 20}}\n"
+     ]
+    }
+   ],
    "source": [
-    "def organize_walks(walks: list[tuple[str, str, int]]) -> dict[str, dict[str, int]]:\n",
-    "    ...\n",
+    "f = open('walks.csv', 'r')\n",
+    "lines = f.readlines() # 這是一個list\n",
+    "f.close()\n",
+    "\n",
+    "# 根據 file 的內容 可以選擇要skip 前幾行 (header)\n",
+    "lines = lines[1:] \n",
+    "\n",
+    "res = {}\n",
+    "\n",
+    "for line in lines:\n",
+    "    # 第一步: 先把最後的回車鍵 '\\n'刪掉\n",
+    "    line = line.strip()\n",
+    "    # 第二步: 利用 ',' 把這個 str 分開成一個 list of str\n",
+    "    info = line.split(',')\n",
+    "\n",
+    "    # process the info\n",
+    "    dog = info[0]\n",
+    "    walker = info[1]\n",
+    "    dist = int(info[2])\n",
+    "\n",
+    "    if dog not in res:\n",
+    "        res[dog] = {}\n",
+    "    \n",
+    "    if walker not in res[dog]:\n",
+    "        res[dog][walker] = 0\n",
+    "    \n",
+    "    res[dog][walker] += dist\n",
     "\n",
     "\n",
-    "print(organize_walks([('Uli', 'Jeff', 3), ('Uli', 'Jeff', 5)]))\n",
-    "# {'Uli': {'Jeff': 8}}\n",
-    "\n",
-    "organize_walks([('Felix', 'Bob', 5), ('Fido', 'Bob', 2), \n",
-    "                ('Felix', 'Bob', 3), ('Fluffy', 'Ann', 10), \n",
-    "                ('Felix', 'Ann', 1), ('Fluffy', 'Ann', 10)])\n",
-    "# {'Felix': {'Bob': 8, 'Ann': 1}, 'Fido': {'Bob': 2}, 'Fluffy': {'Ann': 20}}"
+    "print(res) # {'Felix': {'Bob': 8, 'Ann': 1}, 'Fido': {'Bob': 2}, 'Fluffy': {'Ann': 20}}"
    ]
   },
   {
@@ -243,17 +291,48 @@
    "source": [
     "from typing import TextIO\n",
     "\n",
-    "CENSORED_WORDS = ['shit', 'fuck', 'butt', 'dick']\n",
+    "CENSORED_WORDS = ['shit', 'fuck', 'butt', 'dick', 'motherfucker', ...]\n",
     "def mad_lib(input_file: TextIO, output_file: TextIO) -> None:\n",
-    "    ...\n",
-    "\n",
-    "\n",
+    "    lines = input_file.readlines()\n",
+    "    for line in lines:\n",
+    "        line = line.strip()\n",
+    "        words = line.split(' ')\n",
+    "        for word in words:\n",
+    "            if word in CENSORED_WORDS:\n",
+    "                output_file.write('****')\n",
+    "            else:\n",
+    "                output_file.write(word)\n",
+    "            output_file.write(' ')\n",
+    "        output_file.write('\\n')\n",
     "\n",
     "input_file = open(\"input_file.txt\", \"r\")\n",
     "output_file = open(\"output_file.txt\", \"w\") \n",
     "mad_lib(input_file, output_file) \n",
     "input_file.close() \n",
     "output_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abc', 'xyz', 'ijk']\n",
+      "['abc', 'xyz', 'ijk']\n",
+      "['abc', 'xyz', 'ijk']\n",
+      "['abc', 'xyz', 'ijk']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"abc,xyz,ijk\".split(','))\n",
+    "print(\"abc, xyz, ijk\".split(', '))\n",
+    "print(\"abcTMDxyzTMDijk\".split('TMD'))\n",
+    "print(\"abc xyz ijk\".split(' '))"
    ]
   },
   {
@@ -343,9 +422,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_course_dict(openfile: TextIO) -> dict:\n",
-    "    ...\n",
+    "f = open('exams.csv', 'r')\n",
+    "lines = f.readlines()\n",
+    "f.close()\n",
     "\n",
+    "course_dict = {}\n",
+    "\n",
+    "lines = lines[1:]\n",
+    "for line in lines:\n",
+    "    info = line.strip().split(',')\n",
+    "    # course_dict[info[0]] = info[1:]\n",
+    "    \n",
+    "    course = info[0]\n",
+    "    date = info[1]\n",
+    "    time = info[2]\n",
+    "    \n",
+    "    course_dict[course] = [date, time]\n",
+    "\n",
+    "\n",
+    "print(course_dict)\n",
     "# For example, the entries for the lines in exams.csv would be: \n",
     "# {'CSC108': ['2021-12-19', '14:00'], 'MAT137': ['2021-12-07', '14:00'], \n",
     "#  'CSC110': ['2021-12-19', '14:00'], 'MAT223': ['2021-12-18', '9:00']}"
@@ -361,12 +456,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'2021-12-19': ['CSC108', 'CSC110'], '2021-12-07': ['MAT137'], '2021-12-18': ['MAT223']}\n"
+     ]
+    }
+   ],
    "source": [
     "def create_date_dict(course_dict: dict) -> dict:\n",
-    "    ...\n",
+    "    result = {}\n",
+    "    for course in course_dict:\n",
+    "        date = course_dict[course][0]       \n",
+    "        if date not in result:\n",
+    "            result[date] = []\n",
+    "        result[date].append(course)    \n",
+    "    return result\n",
+    "\n",
     "\n",
     "course_dict = {'CSC108': ['2021-12-19', '14:00'], 'MAT137': ['2021-12-07', '14:00'], \n",
     "               'CSC110': ['2021-12-19', '14:00'], 'MAT223': ['2021-12-18', '9:00']}\n",
@@ -385,13 +495,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAT137\n",
+      "MAT223\n",
+      "CSC108\n",
+      "CSC110\n"
+     ]
+    }
+   ],
    "source": [
     "def output_chrono(course_dict: dict) -> None:\n",
-    "    ...\n",
+    "    date_dict = create_date_dict(course_dict)\n",
     "\n",
+    "    dates = list(date_dict.keys())\n",
+    "\n",
+    "    # dates.sort()\n",
+    "\n",
+    "    # for date in dates:\n",
+    "    #     for course in date_dict[date]:\n",
+    "    #         print(course)\n",
+    "\n",
+    "    while len(dates) > 0:\n",
+    "        min_date = min(dates)\n",
+    "\n",
+    "        for course in date_dict[min_date]:\n",
+    "            print(course)\n",
+    "        \n",
+    "        dates.remove(min_date)\n",
+    "    \n",
     "course_dict = {'CSC108': ['2021-12-19', '14:00'], 'MAT137': ['2021-12-07', '14:00'], \n",
     "               'CSC110': ['2021-12-19', '14:00'], 'MAT223': ['2021-12-18', '9:00']}\n",
     "output_chrono(course_dict)\n",
@@ -413,12 +550,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-12-19\n"
+     ]
+    }
+   ],
    "source": [
     "def busiest_day(course_dict: dict) -> str:\n",
-    "    ...\n",
+    "    date_dict = create_date_dict(course_dict)\n",
+    "\n",
+    "    most_tests = 0\n",
+    "    for date in date_dict:\n",
+    "        num_test = len(date_dict[date])\n",
+    "        if num_test > most_tests:\n",
+    "            most_tests = num_test\n",
+    "            result = date\n",
+    "        \n",
+    "    return result\n",
     "\n",
     "course_dict = {'CSC108': ['2021-12-19', '14:00'], 'MAT137': ['2021-12-07', '14:00'], \n",
     "               'CSC110': ['2021-12-19', '14:00'], 'MAT223': ['2021-12-18', '9:00']}\n",
